--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
             <div class="kpiLabel">مدفوعات (حسب الفلتر)</div>
             <div class="kpiValue" id="fltPay">0</div>
           </div>
+          <div class="kpi mini">
+            <div class="kpiLabel">رصيد حتى تاريخ (إلى)</div>
+            <div class="kpiValue" id="balAt">0</div>
+          </div>
         </section>
 
         <section class="tabs">
