--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b1220" />
   <title>Cash & Wallet Manager VIP</title>
   <link rel="manifest" href="./manifest.json" />
-  <link rel="stylesheet" href="./styles.css?v=1" />
+  <link rel="stylesheet" href="./styles.20260205v3.css" />
 </head>
 <body>
   <div class="app">
@@ -15,7 +15,7 @@
         <div class="logo">💳</div>
         <div class="titles">
           <div class="title" id="appTitle">Cash & Wallet Manager VIP</div>
-          <div class="subtitle">موبايل • أرصدة + عمليات • CRUD على Google Sheet</div>
+          <div class="subtitle" id="buildTag" data-build="20260205v3">موبايل • أرصدة + عمليات • CRUD على Google Sheet — BUILD 20260205v3</div>
         </div>
       </div>
       <div class="actions">
@@ -205,7 +205,7 @@
 
   </div>
 
-  <script src="./config.js?v=1"></script>
-  <script src="./app.js?v=1"></script>
+  <script src="./config.20260205v3.js"></script>
+  <script src="./app.20260205v3.js"></script>
 </body>
 </html>
